fix header gap

--- a/src/renderer/components/TitleBar/TitleBar.module.scss
+++ b/src/renderer/components/TitleBar/TitleBar.module.scss
@@ -30,7 +30,7 @@
 
 .leftButtons {
   display: flex;
-  .button {
+  button {
     margin-right: 0.4rem;
   }
 }
